Fix for Makefile

--- a/server-less/config/Makefile
+++ b/server-less/config/Makefile
@@ -2,6 +2,7 @@ PROJECT_PATH=./
 SWIFT_DOCKER_IMAGE=swift:5.1
 LAMBDA_ZIP=lambda.zip
 LAMBDA_NAME=Config
+EXECUTABLE=config
 
 clean_lambda:
 	rm $(LAMBDA_ZIP) || true
@@ -16,10 +17,10 @@ build_lambda:
 			swift build
 
 package_lambda: clean_lambda build_lambda
-	zip -r -j $(LAMBDA_ZIP) $(PROJECT_PATH)/.build/debug/$(EXAMPLE_EXECUTABLE)
+	zip -r -j $(LAMBDA_ZIP) $(PROJECT_PATH)/.build/debug/$(EXECUTABLE)
 
 deploy_lambda: package_lambda
-	aws lambda update-function-code --function-name $(LAMBDA_NAME) --zip-file fileb://lambda.zip
+	aws lambda update-function-code --function-name $(LAMBDA_NAME) --zip-file fileb://${LAMBDA_ZIP}
 
 SHARED_LIBS_FOLDER=swift-shared-libs
 LAYER_ZIP=swift-lambda-runtime.zip
